Changed Login system from name based to Id based User Info now modifiable

--- a/app/src/main/res/layout/activity_change_user_password.xml
+++ b/app/src/main/res/layout/activity_change_user_password.xml
@@ -25,7 +25,7 @@
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="আপনার বর্তমান পাসওয়ার্ড"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textAlignment="center"
         android:textColorHint="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="আপনার নতুন পাসওয়ার্ড"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textAlignment="center"
         android:textColorHint="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:background="@drawable/input_field"
         android:ems="10"
         android:hint="পুনরায় নতুন পাসওয়ার্ড"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textAlignment="center"
         android:textColorHint="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
