--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -176,18 +176,18 @@
 
     <TextView
         android:id="@+id/textViewUserLocation"
-        android:layout_width="200dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/regular"
+        android:fontFamily="@font/bold"
         android:text="Dhaka"
         android:textColor="@color/dark_blue"
-        android:textSize="21sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.132"
+        app:layout_constraintHorizontal_bias="0.348"
         app:layout_constraintStart_toEndOf="@+id/textView10"
         app:layout_constraintTop_toBottomOf="@+id/textViewUserAge"
-        app:layout_constraintVertical_bias="0.03" />
+        app:layout_constraintVertical_bias="0.05" />
 
     <TextView
         android:id="@+id/textView11"
@@ -199,22 +199,22 @@
         android:textSize="21sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.433"
+        app:layout_constraintHorizontal_bias="0.427"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10"
-        app:layout_constraintVertical_bias="0.061" />
+        app:layout_constraintVertical_bias="0.184" />
 
     <TextView
         android:id="@+id/textViewUserBio"
         android:layout_width="350dp"
-        android:layout_height="100dp"
+        android:layout_height="79dp"
         android:background="@drawable/biofield"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11"
-        app:layout_constraintVertical_bias="0.078" />
+        app:layout_constraintVertical_bias="0.056" />
 
     <Button
         android:id="@+id/btn_diag_page"
