--- a/app/src/main/res/layout/activity_show_location_request.xml
+++ b/app/src/main/res/layout/activity_show_location_request.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/locationpermissionbg">
 
     <TextView
+        android:id="@+id/loca"
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:maxLines="4"
@@ -38,6 +39,18 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.908" />
 
+    <TextView
+        android:id="@+id/permission_check"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loca"
+        app:layout_constraintVertical_bias="0.147" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
