all features added

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -99,6 +99,7 @@
         android:hint="পুনরায় পাসওয়ার্ড"
         android:inputType="textPassword"
         android:textAlignment="center"
+        android:textColor="@color/dark_blue"
         android:textColorHint="@color/dark_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
