--- a/app/src/main/res/layout/activity_show_doctor_details.xml
+++ b/app/src/main/res/layout/activity_show_doctor_details.xml
@@ -99,6 +99,20 @@
         android:layout_below="@+id/doc_email_textID"
         android:layout_alignParentStart="true"
         android:background="@drawable/contactfield" />
+    <Button
+        android:id="@+id/show_doc_in_map"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button"
+        android:text="Show in MAP"
+        android:textColor="@color/white"
+        android:fontFamily="@font/regular"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/doc_phone_textID"
+        android:layout_marginStart="100dp"
+        />
     <TextView
         android:id="@+id/textView125"
         android:layout_width="wrap_content"
@@ -114,6 +128,8 @@
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold" />
+
+
 
 
 </RelativeLayout>
