--- a/app/src/main/res/layout/single_result_doctor_item.xml
+++ b/app/src/main/res/layout/single_result_doctor_item.xml
@@ -9,21 +9,33 @@
     android:paddingTop="16dp">
 
     <LinearLayout
-        android:id="@+id/linear_layoutId6"
+        android:id="@+id/linear_layoutId6ds"
         android:layout_width="359dp"
         android:layout_height="60dp"
-        android:orientation="vertical"
-        android:gravity="center"
+        android:orientation="horizontal"
         android:padding="10dp"
+        android:gravity="center"
         android:layout_marginStart="11dp"
         android:background="@drawable/flippeddocnamefield">
-
+        <TextView
+            android:id="@+id/showDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="km"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="5dp"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/bold"/>
         <TextView
             android:id="@+id/result_doctor_name_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="doctor"
+            android:layout_marginStart="5dp"
+            android:layout_gravity="center"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:textSize="20sp" />
